<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImgUStory"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc"/>

    <TextView
        android:id="@+id/tvUDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ImgUStory" />

    <EditText
        android:id="@+id/edUDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/edUDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvUDesc"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btUCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUDesc" />
    <Button
        android:id="@+id/btUGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gallery"
        app:layout_constraintStart_toEndOf="@id/btUCamera"
        app:layout_constraintTop_toBottomOf="@+id/edUDesc" />
    <Button
        android:id="@+id/btUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUCamera" />

    <ProgressBar
        android:id="@+id/pbUpload"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>