<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageView
        android:id="@+id/imgAuth"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/image_dicoding"
        android:contentDescription="@string/app_auth" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imgAuth"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/auth"
                android:textAlignment="center"
                android:alpha="0"
                android:textSize="32sp" />

            <com.angcassa.stroyapp.model.CustomEdNama
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:alpha="0" />

            <com.angcassa.stroyapp.model.CustomEdEmail
                android:id="@+id/edMail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:alpha="0" />

            <com.angcassa.stroyapp.model.CustomEdPassword
                android:id="@+id/edPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:inputType="textPassword"
                android:alpha="0" />


            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/reg"
                android:alpha="0" />

            <LinearLayout
                android:id="@+id/lsgin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:alpha="0">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginQ" />

                <TextView
                    android:id="@+id/tvReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/login" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
